--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,7 @@
 .shadow-bottom-md {
     box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
-  }
+}
   
+.calc100vwMinus224 {
+  width: calc(100vw - 224px);
+}
